# zundoko-mcp-server

./: AGENTS.md  LICENSE  README.md  client.py  http_client.py  pyproject.toml  requirements.txt  server.py  test_logic.py
.serena/: project.yml
.serena/memories/: project_overview.md
